Disable menu bar

--- a/distribution.org
+++ b/distribution.org
@@ -527,6 +527,11 @@
   :PROPERTIES:
   :header-args: :tangle init.el
   :END:
+** Disable menu bar
+   [2019-01-02 Wed 16:48]
+   #+BEGIN_SRC emacs-lisp
+     (menu-bar-mode -1)
+   #+END_SRC
 ** TODO Doom Theme
    [2018-12-30 Sun 15:22]
    References:
