--- a/distribution.org
+++ b/distribution.org
@@ -65,21 +65,25 @@
            gc-cons-threshold most-positive-fixnum)
    #+END_SRC
 ** Straight.el
-   #+BEGIN_SRC emacs-lisp
-     (setq straight-repository-branch "develop")
-     (defvar bootstrap-version)
-     (let ((bootstrap-file
-            (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
-           (bootstrap-version 5))
-       (unless (file-exists-p bootstrap-file)
-         (with-current-buffer
-             (url-retrieve-synchronously
-              "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
-              'silent 'inhibit-cookies)
-           (goto-char (point-max))
-           (eval-print-last-sexp)))
-       (load bootstrap-file nil 'nomessage))
-   #+END_SRC
+References:
+- https://github.com/raxod502/straight.el/tree/6c47044bfbc419527de4d345ceaf01dea3a3b03d#getting-started
+- https://github.com/raxod502/straight.el/issues/41
+  #+BEGIN_SRC emacs-lisp
+    (setq straight-check-for-modifications '(check-on-save find-when-checking)
+          straight-repository-branch "develop")
+    (defvar bootstrap-version)
+    (let ((bootstrap-file
+           (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+          (bootstrap-version 5))
+      (unless (file-exists-p bootstrap-file)
+        (with-current-buffer
+            (url-retrieve-synchronously
+             "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
+             'silent 'inhibit-cookies)
+          (goto-char (point-max))
+          (eval-print-last-sexp)))
+      (load bootstrap-file nil 'nomessage))
+  #+END_SRC
 ** Use-package
    #+BEGIN_SRC emacs-lisp
      (setq straight-use-package-by-default t
