--- a/distribution.org
+++ b/distribution.org
@@ -591,6 +591,17 @@ References:
         :commands 'lispy-mode
         :hook (emacs-lisp-mode . lispy-mode))
     #+END_SRC
+*** TODO eldoc
+   [2019-02-10 Sun 11:40]
+   References:
+   - https://www.emacswiki.org/emacs/ElDoc
+   - https://github.com/jwiegley/use-package#hooks
+   #+BEGIN_SRC emacs-lisp
+     (use-package eldoc
+       :commands 'turn-on-eldoc-mode
+       :defer t
+       :hook ((emacs-lisp-mode lisp-interactive-mode ielm-mode) . turn-on-eldoc-mode))
+   #+END_SRC
 ** TODO Rust
 *** TODO rust-mode
    [2019-01-02 Wed 14:40]
