--- a/distribution.org
+++ b/distribution.org
@@ -725,12 +725,14 @@ References:
    - https://github.com/tarsius/moody
    #+BEGIN_SRC emacs-lisp
      (use-package moody
+       :disabled t
        :config
        (setq x-underline-at-descent-line t)
        (moody-replace-mode-line-buffer-identification)
        (moody-replace-vc-mode))
 
      (use-package minions
+       :disabled t
        :config (minions-mode 1))
    #+END_SRC
 ** TODO base16-theme
