--- a/distribution.org
+++ b/distribution.org
@@ -514,6 +514,20 @@ References:
        :commands 'smartparens-mode
        :hook (elixir-mode . smartparens-mode))
    #+END_SRC
+** TODO yasnippet
+   [2019-02-18 Mon 14:03]
+   References:
+   - https://github.com/joaotavora/yasnippet
+   - https://joaotavora.github.io/yasnippet/
+   - https://joaotavora.github.io/yasnippet/snippet-development.html
+   - https://github.com/AndreaCrotti/yasnippet-snippets
+   #+BEGIN_SRC emacs-lisp
+     (use-package yasnippet
+       :config (yas-global-mode 1))
+
+     (use-package yasnippet-snippets
+       :after (elixir-mode rust-mode))
+   #+END_SRC
 * Languages
   :PROPERTIES:
   :header-args: :tangle init.el
