--- a/distribution.org
+++ b/distribution.org
@@ -790,8 +790,9 @@ References:
    [2018-12-30 Sun 15:22]
    References:
    - https://github.com/hlissner/emacs-doom-themes
-   #+BEGIN_SRC emacs-lisp :tangle no
+   #+BEGIN_SRC emacs-lisp
      (use-package doom-themes
+       :disabled t
        :init (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
                    doom-themes-enable-italic t) ; if nil, italics is universally disabled
        :config (progn
