--- a/distribution.org
+++ b/distribution.org
@@ -385,6 +385,16 @@ References:
        :config
        (magit-todos-mode 1))
    #+END_SRC
+** TODO git-gutter-plus                                                :git:
+   [2019-03-06 Wed 13:04]
+   References:
+   - https://github.com/nonsequitur/git-gutter-plus
+   - https://github.com/nonsequitur/git-gutter-plus#use-package-setup
+   #+BEGIN_SRC emacs-lisp
+     (use-package git-gutter+
+       :commands (git-gutter+-mode global-git-gutter+-mode)
+       :hook (prog-mode . git-gutter+-mode))
+   #+END_SRC
 ** TODO Org-Mode
 References:
 - https://orgmode.org/
