--- a/distribution.org
+++ b/distribution.org
@@ -632,6 +632,22 @@ References:
        :if (string= "~/.emacs.d/" user-emacs-directory)
        :commands 'restart-emacs)
    #+END_SRC
+** TODO dumb-jump
+   [2019-03-07 Thu 14:07]
+   References:
+   - https://github.com/jacktasia/dumb-jump
+   - https://github.com/jacktasia/dumb-jump#use-package-example-configuration
+   #+BEGIN_SRC emacs-lisp
+     (use-package dumb-jump
+       :init
+       :bind (("M-g o" . dumb-jump-go-other-window)
+              ("M-g j" . dumb-jump-go)
+              ("M-g i" . dumb-jump-go-prompt)
+              ("M-g x" . dumb-jump-go-prefer-external)
+              ("M-g z" . dumb-jump-go-prefer-external-other-window))
+       :config
+       (setq dumb-jump-selector 'ivy))
+   #+END_SRC
 * Languages
   :PROPERTIES:
   :header-args: :tangle init.el
